--- a/index.html
+++ b/index.html
@@ -188,6 +188,21 @@
         <div class="skill-item">
           <h3>VB.NET</h3>
         </div>
+        <div class="skill-item">
+          <h3>C++</h3>
+        </div>
+        <div class="skill-item">
+          <h3>Java</h3>
+        </div>
+        <div class="skill-item">
+          <h3>JavaScript</h3>
+        </div>
+        <div class="skill-item">
+          <h3>Google Suite</h3>
+        </div>
+        <div class="skill-item">
+          <h3>Office 365</h3>
+        </div>
       </div>
     </div>
   </section>
