Updated JavaScript and CSS rules

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <nav class="navbar">
     <div class="container">
       <a href="#" class="logo">Melissa Appenteng</a>
+      <div class="menu-toggle">☰</div>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -34,7 +35,7 @@
   </section>
 
   <!-- About Section -->
-<section id="about" class="about-section">
+  <section id="about" class="about-section">
     <div class="container">
       <h2>About Me</h2>
       <p>
@@ -42,7 +43,7 @@
       </p>
       <br>
       <p>
-        Beyond technology, I am a content creator on social media, where I share lifestyle, beauty, and fitness content. Occasionally, I post about food, movies, and TV shows, giving my audience a glimpse into different aspects of my life. 
+        Beyond technology, I am a content creator on social media, where I share lifestyle, beauty, and fitness content. Occasionally, I post about food, movies, and TV shows, giving my audience a glimpse into different aspects of my life.
       </p>
       <br>
       <p>
@@ -61,10 +62,10 @@
         Although the COVID-19 pandemic made it difficult to continue my studies due to unreliable internet access, the knowledge I gained solidified my passion for technology. Today, I am focused on building a career that combines my love for technology with my interests in data analytics, cybersecurity, and artificial intelligence.
       </p>
     </div>
-  </section>  
+  </section>
 
   <!-- Education Section -->
-<section id="education" class="education-section">
+  <section id="education" class="education-section">
     <div class="container">
       <h2>Education</h2>
       <ul>
@@ -94,7 +95,7 @@
         </li>
       </ul>
     </div>
-  </section>  
+  </section>
 
   <!-- Professional Experience Section -->
   <section id="experience" class="experience-section">
@@ -130,33 +131,45 @@
       <div class="projects-grid">
         <!-- Project 1: CIS 375 Website -->
         <div class="project-item">
-          <h3>CIS 375: Personal Website</h3>
-          <p>
-            <strong>Date:</strong> Spring 2022<br>
-            Built a personal website with HTML, CSS, and JavaScript. The site included a homepage, contact page, 
-            and a page displaying personal poems. This project helped build a solid foundation in front-end web development.
-          </p>
+          <div class="project-header">
+            <h3>CIS 375: Personal Website</h3>
+            <span class="project-date">Spring 2022</span>
+          </div>
+          <div class="project-content">
+            <p>
+              Built a personal website with HTML, CSS, and JavaScript. The site included a homepage, contact page, 
+              and a page displaying personal poems. This project helped build a solid foundation in front-end web development.
+            </p>
+          </div>
         </div>
 
         <!-- Project 2: CIS 400 Concert Ticket Application -->
         <div class="project-item">
+          <div class="project-header">
             <h3>CIS 400: Concert Ticket Application</h3>
+            <span class="project-date">Fall 2022</span>
+          </div>
+          <div class="project-content">
             <p>
-              <strong>Date:</strong> Fall 2022<br>
               Created a Windows Forms application using VB.NET to manage concert seat reservations. 
               The application used text files to track seat availability and allowed users to book or release seats.
             </p>
           </div>
+        </div>
 
         <!-- Project 3: CIS 475 Web Design -->
         <div class="project-item">
-          <h3>CIS 475: Web Design and Programming II</h3>
-          <p>
-            <strong>Date:</strong> Spring 2023<br>
-            Developed a registration and login system using PHP and MySQL, with password hashing for security. 
-            The project also included an admin-only page and downloadable file links. 
-            This enhanced my skills in back-end web development and database management.
-          </p>
+          <div class="project-header">
+            <h3>CIS 475: Web Design and Programming II</h3>
+            <span class="project-date">Spring 2023</span>
+          </div>
+          <div class="project-content">
+            <p>
+              Developed a registration and login system using PHP and MySQL, with password hashing for security. 
+              The project also included an admin-only page and downloadable file links. 
+              This enhanced my skills in back-end web development and database management.
+            </p>
+          </div>
         </div>
       </div>
     </div>
