Updated HTML structure and CSS rules

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   <section id="home" class="hero-section">
     <div class="container">
       <h1>Hello, I'm <span>Melissa</span></h1>
-      <p>An Aspiring Data Analyst & Cybersecurity Specialist</p>
+      <p>Data Analyst & Cybersecurity Specialist</p>
+      <br>
       <a href="#projects" class="btn">View My Work</a>
     </div>
   </section>
@@ -39,7 +40,7 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-        I am an aspiring Data Analyst and Cybersecurity Specialist based in Buffalo, NY, with a passion for technology and a lifelong curiosity about how things work and how they can be improved. My interest in technology stems from my love for DC shows, Marvel movies, and my fascination with shows like <em>Criminal Minds</em>, which made me even more intrigued by the field of cybersecurity and data analytics. I am also deeply interested in quantum physics and artificial intelligence and plan to expand my knowledge in all these subjects.
+        I am a Data Analyst and Cybersecurity Specialist based in Buffalo, NY, with a passion for technology and a lifelong curiosity about how things work and how they can be improved. My interest in technology stems from my love for DC shows, Marvel movies, and my fascination with shows like <em>Criminal Minds</em>, which made me even more intrigued by the field of cybersecurity and data analytics. I am also deeply interested in quantum physics and artificial intelligence and plan to expand my knowledge in all these subjects.
       </p>
       <br>
       <p>
