Updated Skills and About Me sections

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Melissa Appenteng - Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
   <!-- Navigation Bar -->
@@ -39,29 +41,60 @@
   <section id="about" class="about-section">
     <div class="container">
       <h2>About Me</h2>
-      <p>
-        I am a Data Analyst and Cybersecurity Specialist based in Buffalo, NY, with a passion for technology and a lifelong curiosity about how things work and how they can be improved. My interest in technology stems from my love for DC shows, Marvel movies, and my fascination with shows like <em>Criminal Minds</em>, which made me even more intrigued by the field of cybersecurity and data analytics. I am also deeply interested in quantum physics and artificial intelligence and plan to expand my knowledge in all these subjects.
+      <p id="summary">
+        I am a Data Analyst and Cybersecurity Specialist with a strong passion for technology. My fascination with
+        cybersecurity and data analytics began through my love for DC shows, Marvel movies, and investigative series
+        like <em>Criminal Minds</em>. I am also deeply interested in quantum physics and artificial intelligence, and I
+        am dedicated to expanding my knowledge in these fields. Despite challenges during the pandemic, my determination
+        to pursue technology never wavered, and I have focused on building a career that merges my skills in data
+        analytics, cybersecurity, and AI to solve real-world problems.
       </p>
-      <br>
-      <p>
-        Beyond technology, I am a content creator on social media, where I share lifestyle, beauty, and fitness content. Occasionally, I post about food, movies, and TV shows, giving my audience a glimpse into different aspects of my life.
-      </p>
-      <br>
-      <p>
-        I also have a strong love for the arts. Singing, acting, dancing, and theater have been a significant part of my life. I was actively involved in my middle school's theater club for all three years and participated in every talent show throughout high school. One of my most memorable experiences was being part of a summer program at Lincoln Center, where I auditioned and was accepted into the vocal music track. Though I had to choose between a math competition and pursuing music, it was a gamble that paid off, and I cherished the opportunity to hone my craft.
-      </p>
-      <br>
-      <p>
-        As a student athlete, I competed in track and field during middle school and later participated in archery and stunt (cheerleading without the dancing) in high school. These activities taught me discipline, teamwork, and perseverance, which I carry with me in everything I do today.
-      </p>
-      <br>
-      <p>
-        I have always been driven to challenge myself academically and explore different fields. Thanks to my father's encouragement, I was set up for success early in high school, taking advantage of CUNY's College Now program. During my high school years, I enrolled in numerous college-level courses, including business, journalism, media, criminal justice, personal finance, and an introductory computer science course. These experiences allowed me to explore a variety of career paths, and in my final year of high school, I realized that computer science was my true calling.
-      </p>
-      <br>
-      <p>
-        Although the COVID-19 pandemic made it difficult to continue my studies due to unreliable internet access, the knowledge I gained solidified my passion for technology. Today, I am focused on building a career that combines my love for technology with my interests in data analytics, cybersecurity, and artificial intelligence.
-      </p>
+      <div id="fullText" style="display: none;">
+        <p>
+          I am a Data Analyst and Cybersecurity Specialist based in Buffalo, NY, with a passion for technology and a 
+          lifelong curiosity about how things work and how they can be improved. My interest in technology stems from my 
+          love for DC shows, Marvel movies, and my fascination with shows like <em>Criminal Minds</em>, which made me even more 
+          intrigued by the field of cybersecurity and data analytics. I am also deeply interested in quantum physics and 
+          artificial intelligence and plan to expand my knowledge in all these subjects.
+        </p>
+        <br>
+        <p>
+          Beyond technology, I am a content creator on social media, where I share lifestyle, beauty, and fitness content.
+          Occasionally, I post about food, movies, and TV shows, giving my audience a glimpse into different aspects of
+          my life.
+        </p>
+        <br>
+        <p>
+          I also have a strong love for the arts. Singing, acting, dancing, and theater have been a significant part of my
+          life. I was actively involved in my middle school's theater club for all three years and participated in every
+          talent show throughout high school. One of my most memorable experiences was being part of a summer program at
+          Lincoln Center, where I auditioned and was accepted into the vocal music track. Though I had to choose between a
+          math competition and pursuing music, it was a gamble that paid off, and I cherished the opportunity to hone my
+          craft.
+        </p>
+        <br>
+        <p>
+          As a student athlete, I competed in track and field during middle school and later participated in archery and
+          stunt (cheerleading without the dancing) in high school. These activities taught me discipline, teamwork, and
+          perseverance, which I carry with me in everything I do today.
+        </p>
+        <br>
+        <p>
+          I have always been driven to challenge myself academically and explore different fields. Thanks to my father's
+          encouragement, I was set up for success early in high school, taking advantage of CUNY's College Now program.
+          During my high school years, I enrolled in numerous college-level courses, including business, journalism, media,
+          criminal justice, personal finance, and an introductory computer science course. These experiences allowed me to
+          explore a variety of career paths, and in my final year of high school, I realized that computer science was my
+          true calling.
+        </p>
+        <br>
+        <p>
+          Although the COVID-19 pandemic made it difficult to continue my studies due to unreliable internet access, the
+          knowledge I gained solidified my passion for technology. Today, I am focused on building a career that combines
+          my love for technology with my interests in data analytics, cybersecurity, and artificial intelligence.
+        </p>
+      </div>
+      <button id="learnMoreBtn" class="btn">Learn More</button>
     </div>
   </section>
 
@@ -138,8 +171,8 @@
           </div>
           <div class="project-content">
             <p>
-              Built a personal website with HTML, CSS, and JavaScript. The site included a homepage, contact page, 
-              and a page displaying personal poems. This project helped build a solid foundation in front-end web development.
+              Built a personal website with HTML, CSS, and JavaScript. The site included a homepage, contact page, and a
+              page displaying personal poems. This project helped build a solid foundation in front-end web development.
             </p>
           </div>
         </div>
@@ -152,8 +185,8 @@
           </div>
           <div class="project-content">
             <p>
-              Created a Windows Forms application using VB.NET to manage concert seat reservations. 
-              The application used text files to track seat availability and allowed users to book or release seats.
+              Created a Windows Forms application using VB.NET to manage concert seat reservations. The application used
+              text files to track seat availability and allowed users to book or release seats.
             </p>
           </div>
         </div>
@@ -166,9 +199,9 @@
           </div>
           <div class="project-content">
             <p>
-              Developed a registration and login system using PHP and MySQL, with password hashing for security. 
-              The project also included an admin-only page and downloadable file links. 
-              This enhanced my skills in back-end web development and database management.
+              Developed a registration and login system using PHP and MySQL, with password hashing for security. The
+              project also included an admin-only page and downloadable file links. This enhanced my skills in back-end web
+              development and database management.
             </p>
           </div>
         </div>
@@ -181,42 +214,18 @@
     <div class="container">
       <h2>Skills</h2>
       <div class="skills-grid">
-        <div class="skill-item">
-          <h3>CSS</h3>
-        </div>
-        <div class="skill-item">
-          <h3>HTML5</h3>
-        </div>
-        <div class="skill-item">
-          <h3>Python</h3>
-        </div>
-        <div class="skill-item">
-          <h3>Tableau</h3>
-        </div>
-        <div class="skill-item">
-          <h3>PHP</h3>
-        </div>
-        <div class="skill-item">
-          <h3>MySQL</h3>
-        </div>
-        <div class="skill-item">
-          <h3>VB.NET</h3>
-        </div>
-        <div class="skill-item">
-          <h3>C++</h3>
-        </div>
-        <div class="skill-item">
-          <h3>Java</h3>
-        </div>
-        <div class="skill-item">
-          <h3>JavaScript</h3>
-        </div>
-        <div class="skill-item">
-          <h3>Google Suite</h3>
-        </div>
-        <div class="skill-item">
-          <h3>Office 365</h3>
-        </div>
+        <div class="skill-item" data-skill="CSS">CSS</div>
+        <div class="skill-item" data-skill="HTML5">HTML5</div>
+        <div class="skill-item" data-skill="Python">Python</div>
+        <div class="skill-item" data-skill="Tableau">Tableau</div>
+        <div class="skill-item" data-skill="PHP">PHP</div>
+        <div class="skill-item" data-skill="MySQL">MySQL</div>
+        <div class="skill-item" data-skill="VB.NET">VB.NET</div>
+        <div class="skill-item" data-skill="C++">C++</div>
+        <div class="skill-item" data-skill="Java">Java</div>
+        <div class="skill-item" data-skill="JavaScript">JavaScript</div>
+        <div class="skill-item" data-skill="Google Suite">Google Suite</div>
+        <div class="skill-item" data-skill="Office 365">Office 365</div>
       </div>
     </div>
   </section>
@@ -227,15 +236,27 @@
       <h2>Contact Me</h2>
       <p>Email: <a href="mailto:melissa.appenteng@gmail.com">melissa.appenteng@gmail.com</a></p>
       <p>LinkedIn: <a href="https://linkedin.com/in/mappenteng" target="_blank">linkedin.com/in/mappenteng</a></p>
+      <p>GitHub: <a href="https://github.com/M-Appenteng" target="_blank">github.com/M-Appenteng</a></p>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <div class="container">
       <p>&copy; 2024 Melissa Appenteng</p>
     </div>
   </footer>
 
+  <!-- Skill Modal -->
+  <div id="skillModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn">&times;</span>
+      <h3 id="skillTitle"></h3>
+      <p id="skillDescription"></p>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
+
 </html>
