--- a/index.html
+++ b/index.html
@@ -231,14 +231,23 @@
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="contact-section">
-    <div class="container">
-      <h2>Contact Me</h2>
-      <p>Email: <a href="mailto:melissa.appenteng@gmail.com">melissa.appenteng@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/mappenteng" target="_blank">linkedin.com/in/mappenteng</a></p>
-      <p>GitHub: <a href="https://github.com/M-Appenteng" target="_blank">github.com/M-Appenteng</a></p>
-    </div>
-  </section>
+<section id="contact" class="contact-section">
+  <div class="container">
+    <h2>Contact Me</h2>
+    <p>
+      <img src="email_icon.png" alt="Email Icon" class="contact-icon">
+      <a href="mailto:melissa.appenteng@gmail.com">melissa.appenteng@gmail.com</a>
+    </p>
+    <p>
+      <img src="linkedin_icon.png" alt="LinkedIn Icon" class="contact-icon">
+      <a href="https://linkedin.com/in/mappenteng" target="_blank">linkedin.com/in/mappenteng</a>
+    </p>
+    <p>
+      <img src="github_icon.png" alt="GitHub Icon" class="contact-icon">
+      <a href="https://github.com/M-Appenteng" target="_blank">github.com/M-Appenteng</a>
+    </p>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer>
